Update floor
